--- a/artikel/sejarah-perkembangan-jaringan/index.html
+++ b/artikel/sejarah-perkembangan-jaringan/index.html
@@ -85,7 +85,7 @@ if (!doNotTrack) {
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="#!" data-toggle="modal" data-target="#contactModal">Contact</a>
                 </li>
                 </ul>
             </ul>
