--- a/artikel/sejarah-perkembangan-jaringan/index.html
+++ b/artikel/sejarah-perkembangan-jaringan/index.html
@@ -296,7 +296,7 @@ Namun demikian, sepertinya teknnologi jaringan pada era 1990an masih mengalami b
         <div class="row">
             <div class="col">
 
-                &copy; 2018 <a href="https://elwinmusadi.github.io">ElwinMusadi</a> | Template by <a href="https://www.petanikode.com" target="blank">Petani Kode</a>
+                &copy; 2018 <a href="https://elwinmusadi.github.io">ElwinMusadi</a> | Theme by <a href="https://www.petanikode.com" target="blank">Petani Kode</a> | Made Using <a href="https://gohugo.io" target="blank">Hugo 0.51</a>
 
             </div>
         </div>
