--- a/artikel/metode-parsing/index.html
+++ b/artikel/metode-parsing/index.html
@@ -263,7 +263,7 @@ metode ini meliputi:
         <div class="row">
             <div class="col">
 
-                &copy; 2018 <a href="https://elwinmusadi.github.io">ElwinMusadi</a> | Template by <a href="https://www.petanikode.com" target="blank">Petani Kode</a>
+                &copy; 2018 <a href="https://elwinmusadi.github.io">ElwinMusadi</a> | Theme by <a href="https://www.petanikode.com" target="blank">Petani Kode</a> | Made Using <a href="https://gohugo.io" target="blank">Hugo 0.51</a>
 
             </div>
         </div>
