--- a/artikel/menggambar-rumah-netbeans/index.html
+++ b/artikel/menggambar-rumah-netbeans/index.html
@@ -91,7 +91,7 @@ if (!doNotTrack) {
                     <a class="nav-link" href="https://elwinmusadi.github.io">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#!" data-toggle="modal" data-target="#contactModal">Contact</a>
