--- a/about/index.html
+++ b/about/index.html
@@ -121,7 +121,7 @@ if (!doNotTrack) {
                                         <img src="/img/author.jpg" class="rounded-circle mr-1" width="32" height="32" />
                                         <a class="align-middle text-info" href="https://twitter.com/elwinmusadi16">Elwin Musadi</a> 
                                         <small class="align-middle text-muted">
-                                                | update terakhir <time>23-11-2018</time>
+                                                | last update <time>23-11-2018</time>
                                         </small>
                                     </div>
 
