--- a/artikel/menggambar-rumah-netbeans/index.html
+++ b/artikel/menggambar-rumah-netbeans/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
 <meta itemprop="name" content="Menggambar Rumah dengan Java">
-<meta itemprop="description" content="Selamat datang di blog saya, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana. Garis-garis ini akan kita hubungkan menjadi sebuah gambar rumah :D.
+<meta itemprop="description" content="Selamat datang di blog ElwinMusadi, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana. Garis-garis ini akan kita hubungkan menjadi sebuah gambar rumah :D.
 Editor dan Compiler yang saya gunakan disini adalah Netbeans IDE versi 8.2
 Jika belum punya silahkan download dan instal melalui situs resminya https://netbeans.org/
 Baik kita mulai,
@@ -25,7 +25,7 @@ import java.awt.Color; import java.awt.Graphics; import javax.">
 
 
 <meta property="og:title" content="Menggambar Rumah dengan Java" />
-<meta property="og:description" content="Selamat datang di blog saya, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana. Garis-garis ini akan kita hubungkan menjadi sebuah gambar rumah :D.
+<meta property="og:description" content="Selamat datang di blog ElwinMusadi, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana. Garis-garis ini akan kita hubungkan menjadi sebuah gambar rumah :D.
 Editor dan Compiler yang saya gunakan disini adalah Netbeans IDE versi 8.2
 Jika belum punya silahkan download dan instal melalui situs resminya https://netbeans.org/
 Baik kita mulai,
@@ -37,7 +37,7 @@ import java.awt.Color; import java.awt.Graphics; import javax." />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Menggambar Rumah dengan Java"/>
-<meta name="twitter:description" content="Selamat datang di blog saya, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana. Garis-garis ini akan kita hubungkan menjadi sebuah gambar rumah :D.
+<meta name="twitter:description" content="Selamat datang di blog ElwinMusadi, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana. Garis-garis ini akan kita hubungkan menjadi sebuah gambar rumah :D.
 Editor dan Compiler yang saya gunakan disini adalah Netbeans IDE versi 8.2
 Jika belum punya silahkan download dan instal melalui situs resminya https://netbeans.org/
 Baik kita mulai,
@@ -146,7 +146,7 @@ if (!doNotTrack) {
                                         alt='Menggambar Rumah dengan Java'>
                                     </p>
                                     <br/>
-                                    <p>Selamat datang di blog saya, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana.
+                                    <p>Selamat datang di blog ElwinMusadi, kali ini kita akan belajar menggunakan JFrame dan Graphics pada Java untuk menggambar garis sederhana.
 Garis-garis ini akan kita hubungkan menjadi sebuah gambar rumah :D.</p>
 
 <p>Editor dan Compiler yang saya gunakan disini adalah Netbeans IDE versi 8.2</p>
